--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/learnToPlay/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Learn To Play</title>
     <script type="module" crossorigin src="/learnToPlay/assets/index.e9dad4f9.js"></script>
     <link rel="stylesheet" href="/learnToPlay/assets/index.c6829fae.css">
   </head>
